day4/weather/weather-gateway.yaml
apiVersion: networking.istio.io/v1alpha3

kind: Gateway

metadata:
  name: weather-gateway

spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - weather.139.59.221.11.nip.io
