day4/weather/weather-service-entry.yaml
apiVersion: networking.istio.io/valpha3
kind: ServiceEntry

metadata:
  name: weather-egress

spec:
  hosts:
  - api.openweathermap.org
  ports:
  - number: 80
    protocol: HTTP
    name: HTTP
  - number: 443
    protocol: HTTP
    name: HTTP
