day4/weather/weather-virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3

kind: VirtualService

metadata:
  name: weather-vs

spec:
  hosts:
  - "*"
  gateways:
  - weather-gateway

  http:
  - match:
    - uri:
        prefix: /weather
    route:
    - destination:
        host: weatherappsvc
        port:
          number: 8080
  - match:
    - uri:
        exact: /
    route:
    - destination:
        host: weatherappsvc
        port:
          number: 8080
